--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="https://formsubmit.co/cuzimmicah@gmail.com" method="POST" class="form" data-form enctype="multipart/form-data">
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
